# autotoolsfun

./: .travis.yml  README.md  configure.ac
src/: Makefile.am
src/fw/bar/: bar.c
src/fw/foo/: foo.c
test/: Makefile.am
test/fw/: foobar.c
